--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bootstrap": "^3.3.6",
     "exports-loader": "^0.6.3",
     "fancybox": "^3.0.0",
-    "imports-loader": "^0.6.5"
+    "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4"
   }
 }
